--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +10,12 @@
 
 <body>
     <header>
-        <nav class="nav-right-section">
-            <ul>
+        <nav>
+            <ul class="nav-right-section">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Imágenes</a></li>
-                <li><a href="">Icon</a></li>
-                <li><a href="">Phone</a></li>
+                <li class="menu-icon"><a href="#"></a></li>
+                <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/AOLn63G9CuA7q8DJHMlugP0yYX_9sLQ2NdIRscALPBzYbA=s32-c-mo" alt="Imagen de perfil"></a></li>
             </ul>
         </nav>
     </header>
