--- a/index.html
+++ b/index.html
@@ -19,5 +19,46 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section class="main-logo">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo de Google">
+        </section>
+
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text">
+                <a class="micro-icon" href=""></a>
+                <a class="lends-icon" href=""></a>
+            </div>
+        </section>
+
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
+            
+        </section>
+    </main>
+
+    <footer>
+        <ul class="footer-left">
+            <li><a href="#">Sobre Google</a></li>
+            <li><a href="#">Publicidad</a></li>
+            <li><a href="#">Negocios</a></li>
+            <li><a href="#">Cómo funciona la Búsqueda</a></li>
+        </ul>
+        <ul class="footer-right">
+            <li><a href="#">Privacidad</a></li>
+            <li><a href="#">Condiciones</a></li>
+            <li><a href="#">Preferencias</a></li>            
+        </ul>
+    </footer>
 </body>
 </html>
